<resources>
    <string name="app_name">WAS CARS</string>
    <string name="identify_the_car_make">Identify the Car Make</string>
    <string name="hints">Hints</string>
    <string name="identify_the_car_image">Identify the Car Image</string>
    <string name="advanced_level">Advanced Level</string>
    <string name="identify">Identify</string>
    <string name="carImage">car image</string>
    <string name="correct">CORRECT</string>
    <string name="wrong">WRONG</string>
    <string name="textview"></string>
    <string name="textview2"></string>
    <string name="textview3"></string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="textviewjnkjn">TextViewjnkjn</string>
    <string name="textview_A"></string>
    <string name="textview_C"></string>
    <string name="textview_R"></string>
    <string name="textview_3"></string>

    <string-array name="car_names">
        <item>Audi</item>
        <item>BMW</item>
        <item>CHEVROLET</item>
        <item>HONDA</item>
        <item>HYUNDAI</item>
        <item>JAGUAR</item>
        <item>KIA</item>
        <item>LAMBORGINI</item>
        <item>LANDROVER</item>
        <item>MAZDA</item>
        <item>MINI</item>
        <item>NISSAN</item>
        <item>RENAULT</item>
        <item>ROLLSROYCE</item>
        <item>SUZUKI</item>
        <item>TATA</item>
        <item>TESLA</item>
        <item>TOYOTA</item>
    </string-array>
</resources>