<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@drawable/ba"
    tools:context=".CarImageActivity">


    <ImageView
        android:id="@+id/identify_1"
        android:layout_width="172dp"
        android:layout_height="178dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/identify_the_car_image"
        android:onClick="click1"
        app:layout_constraintEnd_toStartOf="@+id/identify_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/identify_2"
        android:layout_width="173dp"
        android:layout_height="171dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/identify_the_car_image"
        android:onClick="click2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_3" />

    <ImageView
        android:id="@+id/identify_3"
        android:layout_width="172dp"
        android:layout_height="177dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/identify_the_car_image"
        android:onClick="click3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/identify_1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="133dp"
        android:layout_height="69dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="findCorrectImage"
        android:text="@string/next"
        android:textSize="30sp"
        app:backgroundTint="#6D7780"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_wrong" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="156dp"
        android:layout_height="79dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/textview_A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_2" />

    <TextView
        android:id="@+id/textView_correct"
        android:layout_width="171dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/textview_C"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <TextView
        android:id="@+id/textView_wrong"
        android:layout_width="171dp"
        android:layout_height="61dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/textview_R"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />


</androidx.constraintlayout.widget.ConstraintLayout>